[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["image", "minifb"]
image = ["dep:image"]

[dependencies]
blit = "0.6"
image = { version = "0.24.6", optional = true }
minifb = { version = "0.24.0", optional = true }
imageproc = "0.23.0"
rusttype = "0.9.2"
num = "0.4"

[dev-dependencies]
image = "0.24.6"
minifb = "0.24.0"
